--- a/src/somemoreCss.css
+++ b/src/somemoreCss.css
@@ -2,31 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
-.app__navBar {
+.app__navbar {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #0D0D0D;
-    padding: 1rem 1rem;
+    background-color: #1b1a1a;
     color: white;
+
+    padding: 1rem 2rem;
 }
 
-.app__navBar_logo {
+.app__navbar_logo {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    color: white;
 }
 
-.app__navBar_logo img {
+.app__navbar_logo img {
     width: 150px;
 }
-.app__navar_links {
+
+.app__navbar_links {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
 
     list-style: none;
 }
@@ -38,4 +40,100 @@
 
 .app__navbar_links li:hover {
     color: gray;
+}
+
+.app__navbar_login {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.app__navbar_login a {
+    margin: 0 1rem;
+    text-decoration: none;
+    transition: .5s ease;
+}
+
+.app__navbar_login a:hover {
+    border-bottom: 1px solid goldenrod;
+}
+
+.app__navbar_login div {
+    width: 1px;
+    height: 30px;
+    background: gray;
+}
+
+.app__navbar_smallscreen {
+    display: none;
+}
+
+.app__navbar_smallscreen_overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: #1b1a1a;
+    transition: .5s ease;
+
+    flex-direction: column;
+    z-index: 5;
+}
+
+.app__navbar_smallscreen_overlay .overlay__close {
+    font-size: 27px;
+    color: goldenrod;
+    cursor: pointer;
+
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.app__navbar_smallscreen_links {
+    list-style: none;
+}
+
+.app__navbar_smallscreen_links li {
+    margin: 2rem;
+    cursor: pointer;
+    color: goldenrod;
+    font-size: 2rem;
+    text-align: center;
+    /* font-family: var(--font-base); */
+}
+
+.app__navbar_smallscreen_links li:hover {
+    color: white;
+}
+
+@media screen and (min-width: 2000px) {
+    .app__navbar_logo img {
+        width: 210px;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+    .app__navbar_links {
+        display: none;
+    }
+
+    .app__navbar_smallscreen {
+        display: flex;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .app__navbar {
+        padding: 1rem;
+    }
+
+    .app__navbar_login {
+        display: none;
+    }
+
+    .app__navbar_logo img {
+        width: 110px;
+    }
 }
