--- a/src/App.css
+++ b/src/App.css
@@ -40,12 +40,13 @@
   justify-content: center;
   align-items: center;
 
-  margin-left: 2rem;
+  margin-left: 1rem;
 }
 
 .app__wrapper_img-reverse {
   justify-content: flex-start;
-  margin-right: 2rem;
+  margin-right: 1rem;
+  /* opacity: 0.5; */
 }
 
 .app__wrapper_img img {
@@ -53,9 +54,9 @@
 }
 
 .custom__button {
-  background-color: var(--color-crimson);
-    color: var(--color-black);
-    font-family: var(--font-base);
+  background-color: crimson;
+    color: white;
+    font-family:'Cormorant Upright', serif;
     font-weight: 700;
     letter-spacing: 0.04em;
     line-height: 28px;
@@ -80,7 +81,7 @@
 
 .p__opensans {
   font-family: var(--font-alt);
-  color: var(--color-white);
+  color: white;
   font-weight: 400;
   letter-spacing: 0.04em;
   text-transform: capitalize;
@@ -89,8 +90,8 @@
 }
 
 .headtext__cormorant {
-  font-family: var(--font-base);
-  color: var(--color-golden);
+  font-family: white;
+  color: goldenrod;
   font-size: 64px;
   line-height: 83.2px;
   letter-spacing: 0.04em;
