--- a/src/Container/Menu/SpecialMenuCss.css
+++ b/src/Container/Menu/SpecialMenuCss.css
@@ -1,11 +1,12 @@
 .app__specialMenu {
     flex-direction: column;
-    background: var(--color-black);
+    background: black;
 }
 
 .app__specialMenu-title {
     margin-bottom: 2rem;
     text-align: center;
+    color: white;
 }
 
 .app__specialMenu-menu {
@@ -19,12 +20,12 @@
 }
 
 .app__specialMenu-menu_heading {
-    font-family: var(--font-base);
+    font-family: 'Cormorant Upright', serif;
     font-weight: 600;
     font-size: 45px;
     line-height: 58.5px;
     letter-spacing: 0.04em;
-    color: var(--color-white);
+    color: white;
 }
 
 .app__specialMenu-menu_wine,
