--- a/src/somemoreCss.css
+++ b/src/somemoreCss.css
@@ -137,3 +137,10 @@
         width: 110px;
     }
 }
+
+/* ============================================================================================================================= */
+.customButton {
+    background-color: gray;
+    color: black;
+    padding: 4px;
+}
