--- a/src/Container/AboutUs/AboutUsCss.css
+++ b/src/Container/AboutUs/AboutUsCss.css
@@ -53,7 +53,7 @@
 }
 .vl {
     border-left: 6px solid goldenrod;
-    height: 300px;
+    height: 400px;
     position: absolute;
     left: 50%;
     margin-left: -3px;
@@ -78,6 +78,10 @@
     .app__aboutus-content_knife {
         margin: 4rem 0;
     }
+
+    .vl {
+        display: none;
+      }
 }
 
 @media screen and (max-width: 650px) {
@@ -85,4 +89,7 @@
         width: 80%;
         height: 320px;
     }
+    .vl {
+        display: none;
+      }
 }
